# burps

./: CMakeLists.txt  README  burps.bcg  changelog.html  config-app.template  config.template  project_info.cmake
src/: CMakeLists.txt  src.pro
src/burps/: CMakeLists.txt  burps.cc  burps.pro
src/libburps/: CMakeLists.txt  libburps.pro
src/libburps/gui/: bwin.cc  bwin.h  locwin.cc  locwin.h
src/libburps/math/: documentation.h  gaussTable.cc  gaussTable.h  localization.cc  localization.h  logTable.cc  logTable.h  orTable.cc  orTable.h  sigmoTable.cc  sigmoTable.h  table.cc  table.h
